Style fix - horizontal scrollbar

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -23,7 +23,7 @@ table {
 
 footer {
 	border-top: 2px #005090 solid;
-	padding: 0.5em;
+	padding: 0.5em 15px;
 	p {
 		margin-top: 0.5em;
 	}
@@ -31,7 +31,7 @@ footer {
 
 header {
 	border-bottom: 2px #005090 solid;
-	padding: 0.5em;
+	padding: 0.5em 15px;
 	p {
 		margin-top: 0.5em;
 	}
@@ -43,7 +43,7 @@ h1 {
 }
 
 div#main {
-	padding: 0.5em;
+	padding: 0.5em 15px;
 	background: $body-bg;
 	color: $text-color;
 }
